Fixing the code error in boking form and adding overflow-x to the carousel.

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,400&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400&display=swap');
 
 body {
+    overflow-x: hidden;
     font-family: 'Lato', sans-serif;
     width: 100%;
     height: 100%;
-    background:url("http://getwallpapers.com/wallpaper/full/3/9/d/594562.jpg") no-repeat bottom right fixed;
+    background-image: url('studio2.jpg') no-repeat bottom right fixed;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -50,7 +51,7 @@ a:hover {
 .navbar-nav {
     height: auto;
     justify-content: space-between;
-    background-color: rgba(0, 0, 0, 0.9)!important;
+    background-color: rgba(0, 0, 0, 0.98)!important;
     transition: all 0.4s ease-in-out;
     -moz-transition: all 0.4s ease-in-out;
     -webkit-transition: all 0.4 ease-in-out;
@@ -67,6 +68,7 @@ a:hover {
     font-weight: bolder;
     color: rgba(252, 218, 127, 0.95)!important;
 }
+
 .navbar-toggler {
     margin-bottom: 20px;
     margin-right: 5px;
